--- a/src/app/sections/profile/profile.component.html
+++ b/src/app/sections/profile/profile.component.html
@@ -11,39 +11,37 @@
       <div class="col-md-3 col-sm-6 wow bounceInUp">
         <div class="profile-widget">
           <h3>Skillset</h3>
-          <h5>UX Design</h5>
-          <div class="skill-bar">
-            <div class="skill-rate-on"></div>
-            <div class="skill-rate-on"></div>
-            <div class="skill-rate-on"></div>
-            <div class="skill-rate-off"></div>
-          </div>
-          <h5>HTML / CSS3 / SASS</h5>
-          <div class="skill-bar">
-            <div class="skill-rate-on"></div>
-            <div class="skill-rate-on"></div>
-            <div class="skill-rate-off"></div>
-            <div class="skill-rate-off"></div>
-          </div>
-          <h5>Javascript</h5>
-          <div class="skill-bar">
-            <div class="skill-rate-on"></div>
-            <div class="skill-rate-on"></div>
-            <div class="skill-rate-on"></div>
-            <div class="skill-rate-on"></div>
-          </div>
-          <h5>Ajax</h5>
-          <div class="skill-bar">
-            <div class="skill-rate-on"></div>
-            <div class="skill-rate-off"></div>
-            <div class="skill-rate-off"></div>
-            <div class="skill-rate-off"></div>
-          </div>
+          <ul>
+            <li>ASP<b>.</b>NET</li>
+            <li>C#</li>
+            <li>MVC</li>
+            <li>Entity Framework</li>
+            <li>JavaScript</li>
+            <li>Angular.js</li>
+            <li>Angular</li>
+            <li>Knockout.js</li>
+            <li>JQuery</li>
+            <li>HTML 5, CSS 3</li>
+            <li>Web API</li>
+            <li>WCF</li>
+            <li>Azure</li>
+            <li>SQL Server</li>
+            <li>Oracle PL/SQL</li>
+          </ul>
         </div>
       </div><!-- .col-md-3 -->
       <div class="col-md-6 col-sm-12 wow bounceInRight">
         <h3>Profesional Profile</h3>
-        <p></p>
+        <p>Passionate Microsoft Full stack (web) senior developer, extensively experienced in technologies including MVC, 
+          Javascript (Knockout.js, Angular 1) WCF, Web API, REST and SQL Server, Oracle PLSQL and Entity framework.
+          <br/><br/>
+          Experienced in working in Agile teams and with the Scrum methodology.
+          Team leader experience.
+          Spent over 10 years in the financial services / wealth management business domain.
+          <br/><br/>
+          I have an excellent positive, pragmatic - 'get the job done' attitude - encompassed within a strong theoretical and practical understanding of best practice and process including Agile methodologies
+          <br/><br/>
+          Seeking interesting, fast paced and challenging green fields contract opportunities.</p>
       </div>
     </div><!-- .row -->
   </div><!-- .container -->
